--- a/src/scss/_overview.scss
+++ b/src/scss/_overview.scss
@@ -9,7 +9,7 @@
 		@include transition-duration(300ms);
 		@include translate(-100%, 0);
 		background : #fff none;
-		bottom : 50px;
+		bottom : 4rem;
 		left : 0;
 		margin : 0;
 		overflow : hidden;
