--- a/src/scss/_photomap.scss
+++ b/src/scss/_photomap.scss
@@ -11,7 +11,7 @@
 		display : block;
 		margin : 0;
 		padding : 0;
-		bottom : 50px;
+		bottom : 4rem;
 		height : auto;
 		left : 0;
 		max-height : 100%;
